<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/item_horizontal_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ingredients_search_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/search_ingredients_hint"/>

                <ImageButton
                    android:id="@+id/ingredient_search_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/cd_search_ingredients"
                    app:srcCompat="@drawable/ic_search_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

            <TextView
                android:id="@+id/loading_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_ingredients"
                android:textAlignment="center"
                app:visibleGone="@{isLoading}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:contentDescription="@string/cd_ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spanCount="3"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:visibleGone="@{!isLoading}"/>

        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_add_black_24dp"
            android:background="@color/colorAccent"
            android:layout_margin="16dp"/>
    </RelativeLayout>

</layout>