<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <import type="android.view.View"/>
        
        <variable
            name="isLoading"
            type="boolean"/>
        <variable
            name="ingredientViewModel"
            type="com.example.mecanos.viewmodel.IngredientViewModel"/>
        <variable
            name="ingredient"
            type="com.example.mecanos.model.Ingredient"/>
    </data>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{ingredient.nombre}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_proveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_proveedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{ingredient.proveedor}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_existencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/existencias">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextExistencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Float.toString(ingredient.existencias)}"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_unidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:hint="@string/unidades">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUnits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{ingredient.unidades}"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ingredient_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agregar"/>

        </LinearLayout>


</layout>